auth code and others

--- a/WechatBotWeb/appsettings.json
+++ b/WechatBotWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "b33ef2ca-65e8-4717-ad60-8d1510b40059"
+  }
 }
