--- a/WechatBotWeb/ClientApp/package.json
+++ b/WechatBotWeb/ClientApp/package.json
@@ -30,8 +30,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "~6.0.8",
+    "@angular-devkit/build-angular": "^0.6.8",
+    "@angular/cli": "^6.1.4",
     "@angular/compiler-cli": "^6.1.4",
     "@angular/language-service": "^6.1.4",
     "@types/applicationinsights-js": "^1.0.5",
@@ -49,6 +49,6 @@
     "protractor": "^5.4.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "~2.7.2"
   }
 }
