--- a/WechatBotWeb/ClientApp/package.json
+++ b/WechatBotWeb/ClientApp/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^6.1.4",
     "@angular/platform-browser-dynamic": "^6.1.4",
     "@angular/router": "^6.1.4",
+    "@ngx-loading-bar/core": "^2.1.2",
+    "@ngx-loading-bar/http-client": "^2.1.2",
+    "@ngx-loading-bar/router": "^2.1.2",
     "applicationinsights-js": "^1.0.18",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
