--- a/WechatBotWeb/ClientApp/package.json
+++ b/WechatBotWeb/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@ngx-loading-bar/http-client": "^2.1.2",
     "@ngx-loading-bar/router": "^2.1.2",
     "applicationinsights-js": "^1.0.18",
+    "clientjs": "^0.1.11",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.2.2",
